[gd_scene load_steps=7 format=3 uid="uid://cqmf6tqu6khsv"]

[ext_resource type="FontVariation" uid="uid://ccdyv65ubusey" path="res://fonts/default_font_black.tres" id="1"]
[ext_resource type="Texture2D" uid="uid://cqsegv1wyr5o7" path="res://graphics/icons/menu_star.png" id="5"]
[ext_resource type="Script" path="res://menus/song_list/SongListItemDifficulty.gd" id="7"]
[ext_resource type="StyleBox" path="res://styles/SongListItemNormal.tres" id="8"]
[ext_resource type="FontVariation" uid="uid://wkerk1bs0uut" path="res://fonts/default_font_regular.tres" id="8_l56nt"]
[ext_resource type="StyleBox" path="res://styles/SongListItemHover.tres" id="9"]

[node name="Control" type="Control"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2
size_flags_horizontal = 3
focus_mode = 2
mouse_filter = 2
script = ExtResource("7")
node_to_scale_path = NodePath("Control")

[node name="Control" type="Button" parent="."]
layout_mode = 0
offset_left = 25.0
offset_right = 1720.0
offset_bottom = 100.0
focus_mode = 0
theme_override_constants/h_separation = 0
theme_override_styles/hover = ExtResource("9")
theme_override_styles/pressed = ExtResource("8")
theme_override_styles/normal = ExtResource("8")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 0
anchor_right = 0.935
anchor_bottom = 1.0
offset_right = -0.825073
mouse_filter = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -15

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="StarTextureRect" type="TextureRect" parent="Control/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(48, 35)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
mouse_filter = 2
texture = ExtResource("5")
expand_mode = 1
stretch_mode = 5

[node name="StarsLabel" type="Label" parent="Control/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
auto_translate_mode = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7
auto_translate = false
theme_override_fonts/font = ExtResource("8_l56nt")
text = "10 "
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -10

[node name="ArcadeTexture" type="TextureRect" parent="Control/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(48, 35)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
mouse_filter = 2
texture = ExtResource("5")
expand_mode = 1
stretch_mode = 5

[node name="ConsoleTexture" type="TextureRect" parent="Control/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(48, 35)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
mouse_filter = 2
texture = ExtResource("5")
expand_mode = 1
stretch_mode = 5

[node name="DifficultyLabel" type="Label" parent="Control/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
auto_translate_mode = 2
layout_mode = 2
size_flags_vertical = 7
auto_translate = false
theme_override_fonts/font = ExtResource("1")
text = "EXTREME"
vertical_alignment = 1

[node name="BadgeTexture" type="TextureRect" parent="Control/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
stretch_mode = 3

[node name="ScoreLabel" type="Label" parent="Control/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
auto_translate_mode = 2
layout_mode = 2
size_flags_vertical = 7
auto_translate = false
theme_override_fonts/font = ExtResource("8_l56nt")
text = "CHEAP - 100%"
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="pressed" from="Control" to="." method="emit_signal" binds= ["pressed"]]
